# koku-opengl-framework

./: CMakeLists.txt  main.cpp  window.cpp  window.h
example/: example_1_simple_vertex_buffer.cpp  example_2_texture.cpp  example_3_rendertarget.cpp  example_4_plane_reflection.cpp  main.cpp  texture.h
lib/: buffer.cpp  buffer.h  compute.cpp  compute.h  framework.h  rendertarget.cpp  rendertarget.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
